--- a/estilos.css
+++ b/estilos.css
@@ -1,32 +1,32 @@
-        * {
-        font-family: Arial, Helvetica, sans-serif;
-    }
-    
-    #video-background {
-        /*  making the video fullscreen  */
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        min-width: 100%;
-        min-height: 100%;
-        width: auto;
-        height: auto;
-        z-index: -100;
-    }
-    
-    .mascara {
-        background-color: rgba(100, 100, 200, 0.5);
-        z-index: 100;
-    }
-    
-    textarea:focus,
-    input:focus,
-    input[type]:focus,
-    .uneditable-input:focus {
-        border-color: rgb(241, 15, 27)!important;
-        box-shadow: 0 1px 1px rgba(23, 229, 167, 0.075) inset, 0 0 8px rgba(23, 229, 167, 0.6);
-        outline: 0 none;
-    }
-    
-    .bg-dark {
-        background-color: transparent !important;
+            * {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        
+        #video-background {
+            /*  making the video fullscreen  */
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            z-index: -100;
+        }
+        
+        .mascara {
+            background-color: rgba(100, 100, 200, 0.5);
+            z-index: 100;
+        }
+        
+        textarea:focus,
+        input:focus,
+        input[type]:focus,
+        .uneditable-input:focus {
+            border-color: rgb(241, 15, 27)!important;
+            box-shadow: 0 1px 1px rgba(23, 229, 167, 0.075) inset, 0 0 8px rgba(23, 229, 167, 0.6);
+            outline: 0 none;
+        }
+        
+        .bg-dark {
+            background-color: transparent !important;
