--- a/estilos.css
+++ b/estilos.css
@@ -6,6 +6,14 @@ h1, h2, h3, p{
     color: white;
 }
 
+h1{
+    font-size: 70px;
+}
+
+video{
+    background-color: rgba(23, 229, 167, 0.075);
+}
+
 #video-background {
     /*  making the video fullscreen  */
       position: absolute;
@@ -29,10 +37,17 @@ h1, h2, h3, p{
         height: auto;
         z-index: -100;
     }
+
+    #first{
+        margin-top: 20%;
+    }
     
     .mascara {
-        background-color: rgba(100, 100, 200, 0.5);
-        z-index: 100;
+        background: rgba(0, 0, 0, 0.5);
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        z-index: -1;
     }
     
     textarea:focus,
