--- a/estilos.css
+++ b/estilos.css
@@ -19,6 +19,7 @@ p {
 }
 
 #txt2 {
+    font-family: 'Lobster', cursive;
     color: #8d0f0f;
     padding: 3%;
     text-align: center;
@@ -26,7 +27,11 @@ p {
     font-weight: 600;
 }
 
-#info {
+#ponche {
+    height: 50%;
+}
+
+.info {
     margin-top: 100px;
     background-color: #fff;
 }
@@ -64,7 +69,7 @@ video {
 }
 
 #first {
-    margin-top: 20%;
+    margin-top: 9%;
 }
 
 .mascara {
