--- a/estilos.css
+++ b/estilos.css
@@ -19,12 +19,15 @@ p {
 }
 
 #txt2 {
-    font-family: 'Lobster', cursive;
     color: #8d0f0f;
     padding: 3%;
     text-align: center;
     font-size: 30px;
     font-weight: 600;
+}
+
+#titulo {
+    font-family: 'Pacifico', cursive;
 }
 
 #ponche {
@@ -34,6 +37,11 @@ p {
 .info {
     margin-top: 100px;
     background-color: #fff;
+}
+
+#boton {
+    border-color: #8d0f0f;
+    background-color: #8d0f0f;
 }
 
 h1 {
